Implementa métodos PATCH e DELETE para usuário
